# iso-md

./: .gitignore  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml
raycast/: clipboard-to-markdown.sh
src/: editor.ts  main.ts  print.css  styles.css  table-sizer.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
