[package]
name = "ai-md"
version = "0.1.0"
description = "ai.md — minimal monospace markdown editor for macOS"
authors = ["Aaro Isosaari"]
license = "MIT"
repository = "https://github.com/aaroi/ai-md"
edition = "2021"

[lib]
name = "ai_md_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
