[package]
name = "iso-md"
version = "0.1.0"
description = "iso.md — minimal monospace markdown editor for macOS"
authors = ["Aaro Isosaari"]
license = "MIT"
repository = "https://github.com/aaroi/iso-md"
edition = "2021"

[lib]
name = "iso_md_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
